# tinyclunx33_zephyr_example

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.rst  README.ubuntu.md  app.overlay  getting_started_on_linux.sh  linker.ld  litex.overlay  prj.conf  test.sh  west.yml
.fwbox/: common.sh  idefix.sh  local.sh  manual.sh  sita.sh  sita_local.sh  tinyclunx33_idefix.sh  tinyclunx33_sita.sh  tinyclunx33_sita_local.sh
app_ar0144/: CMakeLists.txt  Makefile  app.overlay  prj.conf
app_cdc_raw/: Makefile  README.md  app.overlay  env.sh  prj.conf  test.sh
app_custom/: app.overlay
app_custom_rtl/: README.md  README.rst  app.overlay  env.sh  prj.conf
app_customcore/: README.md  app.overlay
app_imx219/: Makefile  README.md  README.rst  app.overlay  env.sh  prj.conf
app_imx219_dual/: CMakeLists.txt  README.rst  app.overlay
app_imx296/: CMakeLists.txt  Kconfig  README.rst  app.overlay
app_imx477/: README.rst  app.overlay
app_minimal/: README.rst  app.overlay
app_shell/: CMakeLists.txt  Makefile  README.md  README.rst  app.overlay  prj.conf
app_test_pattern_generator/: CMakeLists.txt  prj.conf
app_testpattern/: Makefile  README.md  README.rst  app.overlay  prj.conf
demo_bandwidth/: app.overlay  tinyclunx33_rtl_reference_design_v0.8.bit
demo_constructive_realities/: app.overlay  fpga_top_som_impl_constructive_realities_convention_demo_2024_10_05.bit  prj.conf
demo_streamlogic/: prj.conf  (+2 more)
example_usb_cdc_shell/: CMakeLists.txt  README.md  app.overlay  prj.conf  test.py  test.sh  tinyclunx33_usb_shell.py
example_usb_cdc_shell/src/: main.c  usb.c
(+120 files in other folders)
